fix: remove hardcoded API key - user inputs own key

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 </main>
 <footer class="footer">ArchiAgent · Assistente Inteligente para Arquitetos · Desenvolvido para arquitetos brasileiros</footer>
 <script>
-  const GEMINI_KEY = 'AIzaSyBru6z1bPpTmi51lW0vXUt9Hm5B5YYeYZA';
+  const GEMINI_KEY = 'SUA_NOVA_CHAVE';
   const agents = ['proposal', 'memorial', 'presentation', 'permit'];
   function switchAgent(name) {
     agents.forEach(a => {
