--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     resultCard.innerHTML = '<div class="loading"><div class="loading-bars"><div class="loading-bar"></div><div class="loading-bar"></div><div class="loading-bar"></div><div class="loading-bar"></div><div class="loading-bar"></div></div><p>Processando com inteligência artificial...</p></div>';
     btn.disabled = true;
     try {
-      const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=' + GEMINI_KEY, {
+      const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-pro:generateContent?key=' + GEMINI_KEY, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ contents: [{ parts: [{ text: buildPrompt(type) }] }], generationConfig: { temperature: 0.7, maxOutputTokens: 4000 } })
